test/compile_errors/err_comptime_runtime_call.w
//! expect-check-fail: comptime can only call comptime functions

comptime fn noisy() -> i32:
    print("hi")
    0
